--- a/web/leagueOfTrivialG2/vercel.json
+++ b/web/leagueOfTrivialG2/vercel.json
@@ -6,7 +6,15 @@
             "runtime": "vercel-php@0.6.0"
         }
     },
+    "builds": [
+        { "src": "/api/index.php", "use": "vercel-php@0.4.0" },
+        { "src": "/public/**", "use": "@vercel/static" }
+    ],
     "routes": [
+        {
+            "src": "/(css|js|vendor|assets|build)/(.*)",
+            "dest": "public/$1/$2"
+        },
         {
             "src": "/(.*)",
             "dest": "/api/index.php"
